# PTPNHeX

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/ptpnhex-cli/: Cargo.toml
crates/ptpnhex-cli/src/: main.rs
crates/ptpnhex-core/: Cargo.toml
crates/ptpnhex-core/src/: codec.rs  container.rs  error.rs  lib.rs
crates/ptpnhex-core/src/crypto/: cipher.rs  hash.rs  kirk.rs  mod.rs
crates/ptpnhex-core/src/keys/: mod.rs  patapon1.rs
crates/ptpnhex-core/src/save/: bonus_patapon.rs  items.rs  key_items.rs  layout.rs  materials.rs  mod.rs  rarepon.rs  region.rs  weapon.rs
crates/ptpnhex-core/src/sfo/: entry.rs  mod.rs
crates/ptpnhex-core/tests/: container_corpus.rs  crypto_corpus.rs  real_saves.rs
crates/ptpnhex-gui/: Cargo.toml
crates/ptpnhex-gui/src/: main.rs
docs/: crypto.md  save-format.md  sfo.md
