[package]
name = "ptpnhex-cli"
description = "Command-line interface for the PTPNHEX save editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "ptpnhex"
path = "src/main.rs"

[dependencies]
ptpnhex-core.workspace = true
anyhow.workspace = true
clap.workspace = true

[lints]
workspace = true
