[package]
name = "ptpnhex-gui"
description = "Desktop graphical interface for the PTPNHEX save editor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ptpnhex-core.workspace = true

[lints]
workspace = true
